Common data paths.

--- a/image_training.ipynb
+++ b/image_training.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SUR image model training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -12,7 +19,15 @@
     "import torch.utils.data\n",
     "import torchvision.datasets\n",
     "from torchvision.transforms import v2\n",
-    "import torchvision.transforms.functional"
+    "import torchvision.transforms.functional\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convolutional neural network for binary classification"
    ]
   },
   {
@@ -81,6 +96,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper transform for data loading."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data\n",
+    "to_torch = v2.Compose([\n",
+    "    v2.ToImage(),\n",
+    "    v2.ToDtype(torch.float32, scale=True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Used augmentations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -104,10 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_torch = v2.Compose([\n",
-    "    v2.ToImage(),\n",
-    "    v2.ToDtype(torch.float32, scale=True)\n",
-    "])\n",
+    "#Augmentation\n",
     "transforms = v2.Compose([\n",
     "    v2.RandomHorizontalFlip(),\n",
     "    v2.RandomAffine(15, [0.05,0.05], [0.9,1.1]),\n",
@@ -121,22 +160,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data loading."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "target_train = torchvision.datasets.ImageFolder(\"training\", transform=to_torch)\n",
-    "target_valid = torchvision.datasets.ImageFolder(\"validation\", transform=to_torch)\n",
+    "target_validation = torchvision.datasets.ImageFolder(\"validation\", transform=to_torch)\n",
     "\n",
-    "target_count = len([x[1] for x in target_train if x[1] == 0])\n",
-    "class_weights = [1/target_count, 1/(len(target_train)-target_count)]\n",
-    "class_weights = [class_weights[x[1]] for x in target_train]\n",
+    "inverse_counts = 1 / np.bincount([x[1] for x in target_train])\n",
+    "class_weights = [inverse_counts[x[1]] for x in target_train]\n",
     "\n",
+    "# Target class oversampling\n",
     "sampler = torch.utils.data.WeightedRandomSampler(class_weights, len(target_train), replacement=True)\n",
     "\n",
     "loader = torch.utils.data.DataLoader(target_train, batch_size=30, sampler=sampler)\n",
-    "val_loader = torch.utils.data.DataLoader(target_valid, batch_size=len(target_valid))"
+    "validation_loader = torch.utils.data.DataLoader(target_validation, batch_size=len(target_validation))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Augmentation example."
    ]
   },
   {
@@ -145,16 +198,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = next(iter(loader))"
+    "x = target_train[0][0]\n",
+    "display(torchvision.transforms.functional.to_pil_image(transforms(x)))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "display(torchvision.transforms.functional.to_pil_image(transforms(x[0][2])))"
+    "### Training"
    ]
   },
   {
@@ -187,7 +239,7 @@
     "        optimizer.step()\n",
     "    \n",
     "    with torch.no_grad():\n",
-    "        for batch in val_loader:\n",
+    "        for batch in validation_loader:\n",
     "            inputs, labels = batch\n",
     "            result = model(inputs)\n",
     "            loss:torch.Tensor = lfunc(result, labels.reshape([len(labels),1]).float())\n",
@@ -195,17 +247,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "with torch.no_grad():\n",
-    "    for batch in val_loader:\n",
-    "        inputs, labels = batch\n",
-    "        inputs = transforms(inputs)\n",
-    "        result = model(inputs)\n",
-    "        print((result < 0.5) == (labels.reshape([len(labels),1]) < 0.5))"
+    "Model export."
    ]
   },
   {
@@ -214,8 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"visual_model.pth\", \"wb\") as f:\n",
-    "    torch.save(model, f)"
+    "torch.save(model.state_dict(), \"image_model.pth\")"
    ]
   }
  ],
