--- a/image_training.ipynb
+++ b/image_training.ipynb
@@ -40,7 +40,7 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.conv1 = nn.Conv2d(3, 16, 3, padding=1)\n",
-    "        self.pool1 = nn.AvgPool2d(2)\n",
+    "        self.pool1 = nn.MaxPool2d(2)\n",
     "        #40x40\n",
     "        self.conv2a = nn.Conv2d(16, 16, 3, padding=1)\n",
     "        self.conv2b = nn.Conv2d(16, 32, 3, padding=1)\n",
@@ -152,10 +152,7 @@
     "    v2.RandomAffine(15, [0.05,0.05], [0.9,1.1]),\n",
     "    v2.GaussianBlur(3),\n",
     "    v2.RandomApply([AddGaussianNoise(0, 0.15)], p=0.3),\n",
-    "    v2.RandomPosterize(bits=4),\n",
-    "    v2.RandomSolarize(threshold=0.9),\n",
-    "    v2.RandomAutocontrast(),\n",
-    "    v2.RandomAdjustSharpness(sharpness_factor=2)\n",
+    "    v2.RandomPhotometricDistort()\n",
     "])"
    ]
   },
@@ -172,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_train = torchvision.datasets.ImageFolder(\"training\", transform=to_torch)\n",
-    "target_validation = torchvision.datasets.ImageFolder(\"validation\", transform=to_torch)\n",
+    "target_train = torchvision.datasets.ImageFolder(\"data/training\", transform=to_torch)\n",
+    "target_validation = torchvision.datasets.ImageFolder(\"data/validation\", transform=to_torch)\n",
     "\n",
     "inverse_counts = 1 / np.bincount([x[1] for x in target_train])\n",
     "class_weights = [inverse_counts[x[1]] for x in target_train]\n",
@@ -226,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_epochs = 85\n",
+    "n_epochs = 100\n",
     "\n",
     "for i in range(n_epochs):\n",
     "    for batch in iter(loader):\n",
